objects/Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Child_Organisation_Type__c</fullName>
        <formula>TEXT( Child__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Organisation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Organisation__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Child__r.Id ,Child__r.Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Owner__c</fullName>
        <formula>Child__r.Owner.FirstName &amp;&quot; &quot;&amp;  Child__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child (Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hierarchy (this Organisations Parent/s)</relationshipLabel>
        <relationshipName>Hierarchy1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Type__c</fullName>
        <label>Hierarchy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SDS</fullName>
                </value>
                <value>
                    <fullName>Buying Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Organisation_Type__c</fullName>
        <formula>TEXT(Parent__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Organisation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Organisation__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Parent__r.Id ,Parent__r.Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Owner__c</fullName>
        <formula>Parent__r.Owner.FirstName &amp;&quot; &quot;&amp; Parent__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hierarchy (this Organisations Child/Children)</relationshipLabel>
        <relationshipName>Hierarchy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SDS_Child__c</fullName>
        <formula>Child__r.SDS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDS (Child)</label>
        <type>Text</type>
    </fields>
    <label>Hierarchy</label>
    <nameField>
        <displayFormat>H{00000}</displayFormat>
        <label>Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hierarchy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>